List.of/Set.of/Map.of