@@ -14,7 +14,7 @@ public class ConvertList2ArrayTest {
     public void when7ElementsThen9() {
         ConvertList2Array list = new ConvertList2Array();
         int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
         int[][] expect = {
@@ -28,11 +28,10 @@ public class ConvertList2ArrayTest {
     @Test
     public void convertTest() {
         ConvertList2Array cl2a = new ConvertList2Array();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[] {7, 3, 5, 6});
-        list.add(new int[] {1, 8, 19, 4, 0, 9});
-        List<Integer> expected = new ArrayList<>();
-        expected.addAll(Arrays.asList(7, 3, 5, 6, 1, 8, 19, 4, 0, 9));
+        List<int[]> list = new ArrayList<>(List.of(
+                new int[] {7, 3, 5, 6},
+                new int[] {1, 8, 19, 4, 0, 9}));
+        List<Integer> expected = new ArrayList<>(List.of(7, 3, 5, 6, 1, 8, 19, 4, 0, 9));
         assertThat(cl2a.convert(list), is(expected));
     }
 }
